--- a/package.json
+++ b/package.json
@@ -9,6 +9,28 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.7"
+    "@astrojs/react": "^4.1.3",
+    "@astrojs/tailwind": "^5.1.4",
+    "@fontsource/lobster": "^5.1.1",
+    "@fontsource/manrope": "^5.1.1",
+    "@fontsource/mulish": "^5.1.1",
+    "@fontsource/nixie-one": "^5.1.1",
+    "@fontsource/raleway": "^5.1.1",
+    "@iconify-json/material-symbols-light": "^1.2.12",
+    "@iconify-json/mdi": "^1.2.2",
+    "@nanostores/persistent": "^0.10.2",
+    "@nanostores/react": "^0.8.4",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
+    "astro": "^5.1.1",
+    "astro-icon": "^1.1.5",
+    "nanostores": "^0.11.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@iconify/react": "^5.2.0"
   }
 }
