--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/manrope": "^5.1.1",
     "@fontsource/mulish": "^5.1.1",
     "@fontsource/nixie-one": "^5.1.1",
+    "@fontsource/quicksand": "^5.1.1",
     "@fontsource/raleway": "^5.1.1",
     "@iconify-json/material-symbols-light": "^1.2.12",
     "@iconify-json/mdi": "^1.2.2",
